Mega Menu Created

--- a/assets/base.css
+++ b/assets/base.css
@@ -1814,18 +1814,21 @@ input[type='checkbox'] {
 
 .cart-count-bubble {
   position: absolute;
-  background-color: rgb(var(--color-button));
-  color: rgb(var(--color-button-text));
-  height: 1.7rem;
-  width: 1.7rem;
+  background-color: #0074FA;
+  color: #fff;
+  height: 1.5rem;
+  width: 1.5rem;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   bottom: 0.8rem;
   left: 2.2rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
+}
+.cart-count-bubble span {
+  color: #fff !important;
 }
 
 /* utility-bar */
@@ -2150,6 +2153,7 @@ input[type='checkbox'] {
 
   .header--middle-center a.header__heading-link {
     text-align: center;
+    width: 100%;
   }
 
   .header--top-center {
@@ -2172,27 +2176,12 @@ input[type='checkbox'] {
   outline: none;
 }
 
-.header__heading {
-  margin: 0;
-  line-height: 0;
-  width: 20%;
-}
-
-.header > .header__heading-link {
-  line-height: 0;
-}
-
-.header__heading,
-.header__heading-link {
-  grid-area: heading;
-  justify-self: center;
-}
-
 .header__heading-link {
   display: inline-block;
   padding: 0rem;
   text-decoration: none;
   word-break: break-word;
+  width: 20%;
 }
 
 .header__heading-link:hover .h2 {
@@ -2211,7 +2200,7 @@ input[type='checkbox'] {
 
 .header__heading-logo-wrapper {
   width: 100%;
-  display: inline-block;
+  display: flex;
   transition: width 0.3s cubic-bezier(0.52, 0, 0.61, 0.99);
 }
 
@@ -2219,6 +2208,7 @@ input[type='checkbox'] {
   .header__heading,
   .header__heading-link {
     text-align: center;
+    width: 100%;
   }
 
   .header--mobile-left .header__heading,
@@ -2231,31 +2221,22 @@ input[type='checkbox'] {
     grid-template-columns: auto 2fr 1fr;
   }
 }
-
-@media screen and (min-width: 992px) {
-  .header--middle-left .header__heading-link,
-  .header--top-left .header__heading-link {
-    margin-left: -0.75rem;
-  }
-
-  .header__heading,
-  .header__heading-link {
-    justify-self: start;
-  }
-
-  .header--middle-center .header__heading-link,
-  .header--middle-center .header__heading {
-    justify-self: center;
-    text-align: center;
-  }
-
-  .header--top-center .header__heading-link,
-  .header--top-center .header__heading {
-    justify-self: center;
-    text-align: center;
+/* header-mega-mennu */
+.header-mega-mennu {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 28px;
+  background-color: #f7f7f7;
+  padding: 14px;
+  border-radius: 13px;
+  width: 30%;
+}
+@media screen and (max-width: 767.98px) {
+  .header-mega-mennu {
+    display: none
   }
 }
-
 /* Header icons */
 .header__icons {
   display: flex;
@@ -2272,9 +2253,11 @@ input[type='checkbox'] {
     margin: 0;
     display: flex;
     width: max-content;
-    gap: 14px;
+    gap: 10px;
     align-items: center;
     justify-content: flex-end;
+    text-decoration: none;
+    position: relative;
 }
 
 .header__icons .shopify-app-block {
@@ -2555,7 +2538,6 @@ details[open] > .header__submenu {
 
 @media screen and (min-width: 992px) {
   .header__inline-menu {
-    display: block;
     width: 30%;
   }
 
