--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -87,6 +87,11 @@ cart-items .title-wrapper-with-link {
 .cart-item__name {
   text-decoration: none;
   display: block;
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 120px;
 }
 
 .cart-item__name:hover {
