--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -1051,7 +1051,19 @@ input.mobile-facets__checkbox {
   transform: translateY(-50%);
   width: 1.8rem;
 }
-
+.facets-vertical-collection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.facets-vertical-collection .collection-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1;
+  color: #000000;
+  margin:0
+}
 @media screen and (min-width: 768px) {
   .facets-vertical {
     display: flex;
@@ -1106,11 +1118,11 @@ input.mobile-facets__checkbox {
 
   .facets-vertical-form {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    margin: 0 0 14px;
   }
 
   .product-count-vertical {
-    margin-left: 3.5rem;
     position: relative;
   }
 
@@ -1215,6 +1227,9 @@ input.mobile-facets__checkbox {
   }
   .facet-filters {
     padding-left: 3rem;
+    padding: 10px 20px;
+    border: 1px solid rgb(232, 233, 234);
+    border-radius: 4px;
   }
 }
 
