--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -74,6 +74,7 @@ details[open].menu-opening > .menu-drawer__submenu {
 .menu-drawer__inner-container {
   position: relative;
   height: 100%;
+  padding: 0 20px;
 }
 
 .menu-drawer__navigation-container {
