--- a/assets/component-search.css
+++ b/assets/component-search.css
@@ -1,5 +1,5 @@
 .search__input.field__input {
-  padding: 1.05rem !important;
+  padding: 1rem !important;
   border: 1px solid #C5C5C5;
   border-radius: 8px;
   height: unset;
@@ -84,14 +84,16 @@ input::-webkit-search-decoration {
 	color: #9f9f9f;
 	font-size: 14px;
   line-height: 1;
-  top: 50%;
+  top: 50% !important;
   transform: translateY(-50%);
   height: unset;
+}
+.search-modal__form .field__input:not(:placeholder-shown) ~ .field__label {
+  display: none;
 }
 @media screen and (min-width: 1200px) {
   .search__input.field__input {
     font-size: 15px;
-    padding: 1.2rem !important;
   }
   .search-modal__form .field__label {
     font-size: 15px;
@@ -99,6 +101,10 @@ input::-webkit-search-decoration {
   .search__button .icon {
     height: 1.8rem;
     width: 1.8rem;    
+  }
+  .search__button .icon path {
+    fill: #FF980C;
+    font-weight: 900;    
   }
   .reset__button .icon.icon-close {
     height: 1.8;
