--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -141,6 +141,9 @@
   grid-row-start: 2;
   padding: 1.3rem 1rem;
 }
+.card__information .price {
+  margin: 0;
+}
 
 .card:not(.ratio) > .card__content {
   grid-template-rows: max-content minmax(0, 1fr) max-content auto;
@@ -586,11 +589,12 @@
   font-size: 10px;
 }
 .card-information .price--on-sale .price-item--regular {
-  font-size: 8px;
+  font-size: 10px;
   line-height: normal;
 }
 .card-information .price--on-sale .price-item--sale {
-  font-size: 10px;
+  font-size: 12px;
+  line-height: 1;
 }
 .card-information .badge {
   font-size: 8px;
@@ -730,7 +734,7 @@
   }
   .card__heading a {
     font-size: 18px;
-    width: 200px;
+    width: 250px;
   }  
   .card-information .price--on-sale .price__sale {
     gap: 6px;
