--- a/assets/section-related-products.css
+++ b/assets/section-related-products.css
@@ -3,5 +3,16 @@
 }
 
 .related-products__heading {
-  margin: 0 0 3rem;
+  margin: 0 0 2rem;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1;
+  color: #000000;
+  text-align: center;  
+}
+@media(min-width:992px){
+  .related-products__heading {
+    margin: 0 0 3.2rem;
+    font-size: 24px; 
+  }  
 }
